[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.982781, 0.184775, 0, -0.184775, 0.982781, 0, 1.796, 4.216 )
current = true
fov = 30.0

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.857949, 0.513735, 0, -0.513735, 0.857949, 0, 6.46669, 9.93732 )

[node name="FrontPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.982782, 0.184769, 0, -0.184769, 0.982782, 0, 1.79612, 4.21649 )

[node name="RightPosition" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, -0.184775, 0.982781, 0, 0.982781, 0.184775, -1, 8.07676e-09, -4.29587e-08, 4.216, 1.796, 0 )

[node name="BackPosition" type="Position3D" parent="."]
transform = Transform( -1, 1.61535e-08, -8.59174e-08, 0, 0.982781, 0.184775, 8.74228e-08, 0.184775, -0.982781, 0, 1.796, -4.216 )

[node name="LeftPosition" type="Position3D" parent="."]
transform = Transform( 1.19249e-08, 0.184775, -0.982781, 0, 0.982781, 0.184775, 1, -2.20342e-09, 1.17195e-08, -4.216, 1.796, 0 )

